After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 655570 - qtdemux: assertion error when playing Apple Trailers
qtdemux: assertion error when playing Apple Trailers
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal blocker
: 0.10.31
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-07-29 11:00 UTC by Philippe Normand
Modified: 2011-08-03 08:12 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
qtdemux: soften assertion check on stream size (915 bytes, patch)
2011-07-29 11:11 UTC, Philippe Normand
committed Details | Review

Description Philippe Normand 2011-07-29 11:00:41 UTC
This commit introduced the issue:

commit f89caeff5c1820caecfd2e1d9b93ffeb0a477a17
Author: Arun Raghavan <arun.raghavan@collabora.co.uk>
Date:   Tue May 25 01:04:43 2010 +0530

    qtdemux: guess bitrate if only one stream's bitrate is unknown
    
    If the bitrates for all but one audio/video streams are known, and the
    total stream size and duration can be determined, this calculates the
    unkown bitrate as (stream size / duration) - (sum of known bitrates).
    While this is not guaranteed to be very accurate, it should be good
    enough for most purposes.
    
    For example, this is useful for H.263 + AAC streams where no 'btrt' atom
    is available for the video portion.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=619548

Assertion is:

g_assert (size > qtdemux->header_size);

In the case of the Apple Trailers I tried (with WebKitGtk), size and qtdemux->header_size are equal.
The issue can likely be reproduced with Totem, for instance playing http://trailers.apple.com/movies/independent/larafle/larafle-tlr1_h480p.mov
Comment 1 Philippe Normand 2011-07-29 11:11:29 UTC
Created attachment 192866 [details] [review]
qtdemux: soften assertion check on stream size
Comment 2 Tim-Philipp Müller 2011-07-29 11:26:50 UTC
Marking as blocker, since it sounds like a regression.
Comment 3 Sebastian Dröge (slomo) 2011-08-03 08:12:27 UTC
commit 0424368cfc66445b41a58f805f6f024eb8e20ab7
Author: Philippe Normand <pnormand@igalia.com>
Date:   Fri Jul 29 13:03:55 2011 +0200

    qtdemux: soften assertion check on stream size
    
    https://bugzilla.gnome.org/show_bug.cgi?id=655570