qtdemux: soften assertion check on stream size

https://bugzilla.gnome.org/show_bug.cgi?id=655570